# build_scripts/generate_public_contracts.py
@@ -38,7 +38,7 @@ SPECS: dict[str, list[str]] = {
         "AccountDeletionRequest",
         "AccountDeletionData",
         "CurrentUserData",
-        "VipInfo",
+        "MembershipInfo",
     ],
     "common/analytics.yaml": [
         "AnalyticsEventInput",
